some parts have been changed

--- a/home.html
+++ b/home.html
@@ -197,7 +197,7 @@
           <div class="gallery-title">
             <h5>All Fighter</h5>
           </div>
-         
+
           <div class="gallery-items">
             <div class="gallery-img">
               <img src="./images/gallery_item_1.png" alt="gallery-img" />
@@ -223,9 +223,123 @@
           </div>
         </div>
       </section>
+      <!------------------------- GALLERY END --------------------- -->
+      <section class="upcoming">
+        <div class="container">
+          <div class="upcoming-content">
+            <div class="upcoming-title">
+              <h3>Dark Dragon</h3>
+            </div>
+            <div class="upcoming-timer">
+              <div class="days">
+                <p>-1152</p>
+                <span>Days</span>
+              </div>
+              <div class="hours">
+                <p>05</p>
+                <span>Hours</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="pricing">
+        <div class="container">
+          <div class="pricing-title">
+            <h2>Pricing plans</h2>
+          </div>
+          <div class="pricing-cards">
+            <div class="pricing-card">
+              <p>Silver Package</p>
+              <h3>$50.00</h3>
+              <ul>
+                <li>2GB Bandwidth</li>
+                <li>Two Account</li>
+                <li>15GB Storage</li>
+              </ul>
+              <button class="pricing-btn">Choose Plane</button>
+            </div>
+            <div class="pricing-card">
+              <p>Silver Package</p>
+              <h3>$60.00</h3>
+              <ul>
+                <li>2GB Bandwidth</li>
+                <li>Two Account</li>
+                <li>15GB Storage</li>
+              </ul>
+              <button class="pricing-btn">Choose Plane</button>
+            </div>
+            <div class="pricing-card">
+              <p>Silver Package</p>
+              <h3>$80.00</h3>
+              <ul>
+                <li>2GB Bandwidth</li>
+                <li>Two Account</li>
+                <li>15GB Storage</li>
+              </ul>
+              <button class="pricing-btn">Choose Plane</button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-items">
+          <div class="footer-item">
+            <img class="logo" src="./images/logo.png" alt="Logo" />
+            <p>
+              Heaven fruitful doesn't over lesser days appear creeping seasons
+              so behold bearing days open
+            </p>
+          </div>
+          <div class="footer-item">
+            <h4>Contact Info</h4>
+            <p class="footer-adress">
+              Address : Your address goes here, your demo address. Bangladesh.
+            </p>
+            <p class="footer-phone">Phone : +8880 44338899</p>
+            <p class="footer-email">Email : info@colorlib.com</p>
+          </div>
+          <div class="footer-item">
+            <h4>Important Link</h4>
+            <a href="https://preview.colorlib.com/theme/beko/index.html"
+              >WHMCS-bridge</a
+            >
+            <a href="https://preview.colorlib.com/theme/beko/index.html"
+              >Search Domain</a
+            >
+            <a href="https://preview.colorlib.com/theme/beko/index.html"
+              >My Account</a
+            >
+            <a href="https://preview.colorlib.com/theme/beko/index.html"
+              >Shopping Cart</a
+            >
+            <a href="https://preview.colorlib.com/theme/beko/index.html"
+              >Our Shop</a
+            >
+          </div>
+          <div class="footer-item">
+            <h4>Newsletter</h4>
+            <p>
+              Heaven fruitful doesn't over lesser in days. Appear creeping
+              seasons deve behold bearing days open
+            </p>
+            <form>
+              <input type="email" placeholder="Email Address" />
+              <button class="footer-btn">
+                <i class="fa-regular fa-paper-plane"></i>
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="./js/app.js"></script>
-    <!-- <script src="https://kit.fontawesome.com/7254eb5e7b.js" crossorigin="anonymous"></script> -->
+    <script
+      src="https://kit.fontawesome.com/7254eb5e7b.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
