--- a/home.html
+++ b/home.html
@@ -335,6 +335,41 @@
         </div>
       </div>
     </footer>
+    <div class="copyright">
+      <div class="container">
+        <div class="copyright-content">
+          <div class="copyright-subject">
+            <p>
+              Copyright ©2022 All rights reserved | This template is made with
+              <i class="fa-regular fa-heart"></i> by
+              <a href="https://colorlib.com/">Colorlib</a>
+            </p>
+          </div>
+          <div class="copyright-social">
+            <ul class="social-list">
+              <li>
+                <a href="#" class="social_icon"
+                  ><i class="fab fa-facebook-f"></i
+                ></a>
+              </li>
+              <li>
+                <a href="#" class="social_icon"
+                  ><i class="fab fa-twitter"></i
+                ></a>
+              </li>
+              <li>
+                <a href="#" class="social_icon"><i class="fas fa-globe"></i></a>
+              </li>
+              <li>
+                <a href="#" class="social_icon"
+                  ><i class="fab fa-behance"></i
+                ></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script src="./js/app.js"></script>
     <script
