--- a/fighter.html
+++ b/fighter.html
@@ -9,45 +9,229 @@
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon" />
 </head>
 <body>
-    <header class="header header-white header-bg">
-        <div class="container">
-          <nav class="navBar">
-            <div class="logo">
-              <a href="./home.html">
-                <img src="./images/logo.png" alt="beko-logo" />
-              </a>
-            </div>
-            <ul class="navList">
-              <li class="navItem">
-                <a class="navLink" href="./home.html">Home</a>
-              </li>
-              <li class="navItem">
-                <a class="navLink" href="./fighter.html">Fighter</a>
-              </li>
-              <li class="navItem">
-                <a class="navLink" href="./team.html">Team</a>
-              </li>
-              <li class="navItem">
-                <a class="navLink" href="./contact.html">Blog</a>
-              </li>
-              <li class="navItem">
-                <a class="navLink" href="./contact.html">Contact</a>
-              </li>
-            </ul>
-            <button class="nav-btn">Install Now</button>
-          </nav>
+  <header class="header header-white">
+    <div class="container">
+      <nav class="navBar">
+        <i class="fa-solid fa-bars"></i>
+        <div class="logo">
+          <a href="./home.html">
+            <img src="./images/logo.png" alt="beko-logo" />
+          </a>
         </div>
- 
-      </header>
+
+        <ul class="navList">
+          <li class="navItem">
+            <a class="navLink" href="./home.html">Home</a>
+          </li>
+          <li class="navItem">
+            <a class="navLink" href="./fighter.html">Fighter</a>
+          </li>
+          <li class="navItem">
+            <a class="navLink" href="./team.html">Team</a>
+          </li>
+          <li class="navItem">
+            <a class="navLink" href="./blog.html">Blog</a>
+          </li>
+          <li class="navItem">
+            <a class="navLink" href="./contact.html">Contact</a>
+          </li>
+        </ul>
+
+        <button class="nav-btn">Install Now</button>
+      </nav>
+      <div class="mobile-menu">
+        <ul class="menuList">
+          <li class="menuItem">
+            <a href="./home.html">Home</a>
+          </li>
+          <li class="menuItem">
+            <a href="./fighter.html">Fighter</a>
+          </li>
+          <li class="menuItem">
+            <a href="./team.html">Team</a>
+          </li>
+          <li class="menuItem">
+            <a href="./blog.html">Blog</a>
+          </li>
+          <li class="menuItem">
+            <a href="./contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </header>
+
       <main>
         <section class="fighter">
+          
           <div class="container">
             <div class="fighter-title">
-              <h1>Fighter</h1>
-
+              <h2>Fighter</h2> 
             </div>
           </div>
         </section>
+        <section class="clients">
+          <div class="container">
+            <div class="client-brends">
+              <div class="client-brend">
+                <img src="./images/client_logo_1.png" alt="natural" />
+              </div>
+              <div class="client-brend">
+                <img src="./images/client_logo_2.png" alt="Iconic" />
+              </div>
+              <div class="client-brend">
+                <img src="./images/client_logo_3.png" alt="RETRO" />
+              </div>
+              <div class="client-brend">
+                <img src="./images/client_logo_4.png" alt="REFRESH" />
+              </div>
+              <div class="client-brend">
+                <img src="./images/client_logo_5.png" alt="Hipster" />
+              </div>
+              <div class="client-brend">
+                <img src="./images/client_logo_1.png" alt="natural" />
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="gallery">
+          <div class="container">
+            <div class="gallery-title">
+              <h5>All Fighter</h5>
+            </div>
+  
+            <div class="gallery-items">
+              <div class="gallery-img">
+                <img src="./images/gallery_item_1.png" alt="gallery-img" />
+              </div>
+              <div class="gallery-img">
+                <img src="./images/gallery_item_7.png" alt="gallery-img" />
+              </div>
+              <div class="gallery-img">
+                <img src="./images/gallery_item_2.png" alt="gallery-img" />
+              </div>
+              <div class="gallery-img">
+                <img src="./images/gallery_item_3.png" alt="gallery-img" />
+              </div>
+              <div class="gallery-img">
+                <img src="./images/gallery_item_5.png" alt="gallery-img" />
+              </div>
+              <div class="gallery-img">
+                <img src="./images/gallery_item_4.png" alt="gallery-img" />
+              </div>
+              <div class="gallery-img">
+                <img src="./images/gallery_item_6.png" alt="gallery-img" />
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="upcoming">
+          <div class="container">
+            <div class="upcoming-content">
+              <div class="upcoming-title">
+                <h3>Dark Dragon</h3>
+              </div>
+              <div class="upcoming-timer">
+                <div class="days">
+                  <p>-1152</p>
+                  <span>Days</span>
+                </div>
+                <div class="hours">
+                  <p>05</p>
+                  <span>Hours</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <footer class="footer">
+          <div class="container">
+            <div class="footer-items">
+              <div class="footer-item">
+                <img class="logo" src="./images/logo.png" alt="Logo" />
+                <p>
+                  Heaven fruitful doesn't over lesser days appear creeping seasons
+                  so behold bearing days open
+                </p>
+              </div>
+              <div class="footer-item">
+                <h4>Contact Info</h4>
+                <p class="footer-adress">
+                  Address : Your address goes here, your demo address. Bangladesh.
+                </p>
+                <p class="footer-phone">Phone : +8880 44338899</p>
+                <p class="footer-email">Email : info@colorlib.com</p>
+              </div>
+              <div class="footer-item">
+                <h4>Important Link</h4>
+                <a href="https://preview.colorlib.com/theme/beko/index.html"
+                  >WHMCS-bridge</a
+                >
+                <a href="https://preview.colorlib.com/theme/beko/index.html"
+                  >Search Domain</a
+                >
+                <a href="https://preview.colorlib.com/theme/beko/index.html"
+                  >My Account</a
+                >
+                <a href="https://preview.colorlib.com/theme/beko/index.html"
+                  >Shopping Cart</a
+                >
+                <a href="https://preview.colorlib.com/theme/beko/index.html"
+                  >Our Shop</a
+                >
+              </div>
+              <div class="footer-item">
+                <h4>Newsletter</h4>
+                <p>
+                  Heaven fruitful doesn't over lesser in days. Appear creeping
+                  seasons deve behold bearing days open
+                </p>
+                <form>
+                  <input type="email" placeholder="Email Address" />
+                  <button class="footer-btn">
+                    <i class="fa-regular fa-paper-plane"></i>
+                  </button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </footer>
+        <div class="copyright">
+          <div class="container">
+            <div class="copyright-content">
+              <div class="copyright-subject">
+                <p>
+                  Copyright ©2022 All rights reserved | This template is made with
+                  <i class="fa-regular fa-heart"></i> by
+                  <a href="https://colorlib.com/">Colorlib</a>
+                </p>
+              </div>
+              <div class="copyright-social">
+                <ul class="social-list">
+                  <li>
+                    <a href="#" class="social_icon"
+                      ><i class="fab fa-facebook-f"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#" class="social_icon"
+                      ><i class="fab fa-twitter"></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#" class="social_icon"><i class="fas fa-globe"></i></a>
+                  </li>
+                  <li>
+                    <a href="#" class="social_icon"
+                      ><i class="fab fa-behance"></i
+                    ></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <script src="https://kit.fontawesome.com/7254eb5e7b.js" crossorigin="anonymous"></script>
         <script src="./js/app.js"></script>
 </body>
 </html>
