--- a/home.html
+++ b/home.html
@@ -12,11 +12,13 @@
     <header class="header header-white">
       <div class="container">
         <nav class="navBar">
+          <i class="fa-solid fa-bars"></i>
           <div class="logo">
             <a href="./home.html">
               <img src="./images/logo.png" alt="beko-logo" />
             </a>
           </div>
+
           <ul class="navList">
             <li class="navItem">
               <a class="navLink" href="./home.html">Home</a>
@@ -28,14 +30,34 @@
               <a class="navLink" href="./team.html">Team</a>
             </li>
             <li class="navItem">
-              <a class="navLink" href="./contact.html">Blog</a>
+              <a class="navLink" href="./blog.html">Blog</a>
             </li>
             <li class="navItem">
               <a class="navLink" href="./contact.html">Contact</a>
             </li>
           </ul>
+
           <button class="nav-btn">Install Now</button>
         </nav>
+        <div class="mobile-menu">
+          <ul class="menuList">
+            <li class="menuItem">
+              <a href="./home.html">Home</a>
+            </li>
+            <li class="menuItem">
+              <a href="./fighter.html">Fighter</a>
+            </li>
+            <li class="menuItem">
+              <a href="./team.html">Team</a>
+            </li>
+            <li class="menuItem">
+              <a href="./blog.html">Blog</a>
+            </li>
+            <li class="menuItem">
+              <a href="./contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
 
