css final project

--- a/blog.html
+++ b/blog.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style/style.css" />
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon" />
-    <title>BEKO</title>
+    <title>BEKO | Blog</title>
   </head>
 
   <body>
+    <!-- Header Start  -->
     <header class="header header-white">
       <div class="container">
         <nav class="navBar">
@@ -69,6 +70,7 @@
           </div>
         </div>
       </section>
+      <!-- Header END  -->
       <!-- Blog Sidebars  -->
       <section class="blog-sidebars">
         <div class="container">
