--- a/single-blog.html
+++ b/single-blog.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style/style.css" />
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon" />
-    <title>BEKO</title>
+    <title>BEKO | Single Blog</title>
   </head>
   <body>
+    <!-- Header Start  -->
     <header class="header header-white">
       <div class="container">
         <nav class="navBar">
@@ -60,6 +61,8 @@
         </div>
       </div>
     </header>
+    <!-- Header END  -->
+    <!-- Single Blog Start  -->
     <main class="main">
       <section class="single-blog">
         <div class="container">
@@ -68,6 +71,8 @@
           </div>
         </div>
       </section>
+      <!-- Single Blog END  -->
+      <!-- Single Blog Sidebars Start  -->
       <section class="single-blog-sidebars">
         <div class="container">
           <div class="single-blog-sidebars-row">
@@ -157,6 +162,8 @@
                   </ul>
                 </div>
               </div>
+               <!-- Single Blog Sidebars  -->
+               <!-- Perv next post Start -->
               <div class="perv-next-post">
                 <div class="perv-post">
                   <img src="./images/preview.png" alt="perv" />
@@ -173,6 +180,8 @@
                   <img src="./images/next.png" alt="next" />
                 </div>
               </div>
+              <!-- Perv Next Post END  -->
+              <!-- Blog Author Start  -->
               <div class="blog-author">
                 <div class="blog-author-title">
                   <img src="./images/author.png" alt="Harvard milan" />
@@ -186,6 +195,8 @@
                   </div>
                 </div>
               </div>
+              <!-- Blog Author END -->
+              <!-- Comment area Start  -->
               <div class="comments-area">
                 <div class="comment-list">
                   <div class="comment-title">
@@ -263,6 +274,8 @@
                 </form>
               </div>
             </div>
+             <!-- Comment area END -->
+             <!-- Blog Right Side Bars START  -->
             <div class="blog-right-sidebars">
               <div class="blog-widgets">
                 <aside class="search-widget">
@@ -448,7 +461,10 @@
           </div>
         </div>
       </section>
+         <!-- Blog Right Side Bars START  -->
     </main>
+    <!-- Main END  -->
+    <!-- Footer Start  -->
     <footer class="footer footer-white">
       <div class="container">
         <div class="footer-items">
@@ -536,6 +552,8 @@
         </div>
       </div>
     </footer>
+    <!-- Footer END  -->
+    <!-- JS Links  -->
     <script src="./js/app.js"></script>
     <script
       src="https://kit.fontawesome.com/7254eb5e7b.js"
