--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style/style.css" />
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon" />
-    <title>BEKO</title>
+    <title>BEKO | Contact</title>
   </head>
   <body>
   <!-- Header Start  -->
