--- a/fighter.html
+++ b/fighter.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BEKO</title>
+    <title>BEKO | Fighter</title>
     <link rel="stylesheet" href="/style/style.css" />
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon" />
 </head>
@@ -231,6 +231,8 @@
             </div>
           </div>
         </div>
+        <!-- Footer END  -->
+        <!-- JS Links  -->
         <script src="https://kit.fontawesome.com/7254eb5e7b.js" crossorigin="anonymous"></script>
         <script src="./js/app.js"></script>
 </body>
