--- a/home.html
+++ b/home.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon" />
   </head>
   <body>
+    <!-- Header Start  -->
     <header class="header header-white">
       <div class="container">
         <nav class="navBar">
@@ -60,8 +61,10 @@
         </div>
       </div>
     </header>
-
+    <!-- Header END  -->
+    <!-- Main Start  -->
     <main>
+      <!-- Home Start  -->
       <section class="home">
         <div class="container">
           <div class="home-title">
@@ -75,6 +78,8 @@
           </div>
         </div>
       </section>
+      <!-- Home END  -->
+      <!-- Clients Start  -->
       <section class="clients">
         <div class="container">
           <div class="client-brends">
@@ -99,6 +104,8 @@
           </div>
         </div>
       </section>
+      <!-- Clients END  -->
+      <!-- About Start  -->
       <section class="about">
         <div class="container">
           <div class="about-content">
@@ -117,6 +124,8 @@
           </div>
         </div>
       </section>
+      <!-- About END  -->
+      <!-- Live Stareams Start  -->
       <section class="live-stareams">
         <div class="live-stareams-content">
           <div class="live-stareams-title">
@@ -130,8 +139,8 @@
           </div>
         </div>
       </section>
-
-      <!------------------------------------ LASTEST WAR ------------------- -->
+      <!-- Live stareams Start  -->
+      <!-- Lastest War Start-->
 
       <section class="lastest-war">
         <div class="container">
@@ -214,6 +223,8 @@
           </div>
         </div>
       </section>
+      <!-- Lastest War END  -->
+      <!-- Gallery Start  -->
       <section class="gallery">
         <div class="container">
           <div class="gallery-title">
@@ -246,6 +257,7 @@
         </div>
       </section>
       <!------------------------- GALLERY END --------------------- -->
+      <!-- upcoming Start  -->
       <section class="upcoming">
         <div class="container">
           <div class="upcoming-content">
@@ -265,6 +277,8 @@
           </div>
         </div>
       </section>
+      <!-- Upcoming END  -->
+      <!-- Pricing Start  -->
       <section class="pricing">
         <div class="container">
           <div class="pricing-title">
@@ -304,7 +318,10 @@
           </div>
         </div>
       </section>
+      <!-- Pricing END  -->
     </main>
+    <!-- Main END  -->
+    <!-- Footer START  -->
     <footer class="footer">
       <div class="container">
         <div class="footer-items">
@@ -392,7 +409,8 @@
         </div>
       </div>
     </div>
-
+    <!-- Footer END  -->
+    <!-- JS Links  -->
     <script src="./js/app.js"></script>
     <script
       src="https://kit.fontawesome.com/7254eb5e7b.js"
